# Nse-stock-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  nse_analyzer - Shortcut.lnk  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
config/: settings.yaml  stocks.yaml
notebooks/: backtest_ml_model.py  exploration.ipynb  indicator_analysis.ipynb  indicator_analysis.py  ml_backtest_results.json
notebooks/notebooks/outputs/: stock_analysis_detailed.json
notebooks/outputs/: stock_analysis_detailed.json
src/nse_analyzer/: data_fetcher.py
src/nse_analyzer/indicators/: fundamental.py
src/nse_analyzer/indicators/technical/: __init__.py  base.py  bollinger_bands.py  calculator.py  macd.py  rsi.py  supertrend.py
src/nse_analyzer/utils/: config.py
tests/: test_data_fetcher.py  test_fundamental_indicators.py  test_indicators.py
