[project]
name = "nse-stock-analysis"
version = "0.1.0"
description = "AI-based NSE stock analysis"
authors = ["Your Name <you@email.com>"]
dependencies = [
    "pandas",
    "yfinance",
    "scikit-learn"
]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
